[project]
name = "redactor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "azure-ai-documentintelligence (>=1.0.2,<2.0.0)",
    "azure-ai-textanalytics (>=5.3.0,<6.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "streamlit (>=1.49.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "levenshtein (>=0.27.1,<0.28.0)"
]

[tool.poetry]
packages = [{include = "redactor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
